# server-wifi-esp32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: apa102.cpp  apa102.h  simple_wifi.c.orig  simple_wifi.cpp  simple_wifi_nonclosing.cpp  working_simple_wifi.cpp
